deploy/manifests/app-deploy.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: nitro-app
  namespace: "default"
  labels: 
     app: nitro-app

spec:
  replicas: 1 
  selector:
    matchLabels:
      app: nitro-app

  template:
    metadata:
      labels:
        app: nitro-app
    spec:
      containers:
      - name: nitro-app
        image: DOCKER_IMAGE
        imagePullPolicy: Always
        ports:
        - containerPort: HTTPPORT
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
