deploy/manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nitro-app-service
  namespace: "default"
  labels:
    app: nitro-app 
spec:
  selector:
    app: nitro-app 

  ports:
    - port: 8080
      targetPort: 8080
